--- a/f2h2h1.github.io/在Windows下安装Magento2.html
+++ b/f2h2h1.github.io/在Windows下安装Magento2.html
@@ -483,7 +483,7 @@ $cacheId = implode('-', $this-&gt;scopePriorityScheme) . "-" . $this-&gt;cacheId
 <pre><code>sed -i 's/lib\/internal\/Magento\/Framework\//vendor\/magento\/framework\//g' windows.patch;
 </code></pre>
 <p>执行 patch 的命令，要在项目的根目录运行</p>
-<pre><code>patch -p0 --no-backup-if-mismatch &lt; windows.patch;
+<pre><code>patch --verbose -p0 --no-backup-if-mismatch &lt; windows.patch;
 </code></pre>
 <p>生成 patch 文件的方式</p>
 <pre><code class="lang-php">\define('PATCH_FILE', 'windows.patch');
@@ -525,7 +525,7 @@ array_map(function($item) {
     return $item;
 }, [$cpArr, $diffArr, $sedArr]);
 
-echo 'patch -p0 --no-backup-if-mismatch &lt; ' . PATCH_FILE . PHP_EOL;
+echo 'patch --verbose -p0 --no-backup-if-mismatch &lt; ' . PATCH_FILE . PHP_EOL;
 </code></pre>
 &lt;!--
 
@@ -533,7 +533,7 @@ cat &gt; windows.patch &lt;&lt;- 'EOF'
 
 EOF
 cat windows.patch; \
-patch -p0 --no-backup-if-mismatch &lt; windows.patch;
+patch --verbose -p0 --no-backup-if-mismatch &lt; windows.patch;
 
 
 if [ -d lib/internal/Magento/Framework ]; \
@@ -586,4 +586,6 @@ echo endAt: $endAt; \
 echo $hour $min $sec | awk '{printf("Runtime: %02d:%02d:%02d\n", $1, $2, $3)}'; \
 echo $startAtTimestamp $endAtTimestamp | awk '{printf("Runtime: %d\n", $2-$1)}'
 
+查看当前版本
+php bin/magento --version
 --&gt;
