--- a/kexizeroing.github.io/A guide to Prompt Engineering.html
+++ b/kexizeroing.github.io/A guide to Prompt Engineering.html
@@ -84,6 +84,7 @@ Context: ...<br/>
 Question: What ...?<br/>
 Answer:</p>
 </blockquote>
+<p>When your prompts involve multiple components like context, instructions, and examples, XML tags can be a game-changer. Use tags like <code>&lt;instructions&gt;</code>, <code>&lt;example&gt;</code>, and <code>&lt;formatting&gt;</code> to clearly separate different parts of your prompt. Combine XML tags with other techniques like multi-shot prompting (<code>&lt;examples&gt;</code>) or chain of thought (<code>&lt;thinking&gt;</code>, <code>&lt;answer&gt;</code>). This creates super-structured, high-performance prompts.</p>
 <p>For harder use cases, just providing instructions won't be enough. This is where you need to think more about the context and the different elements you can use in a prompt. Other elements you can provide are input data or examples.</p>
 <p>Prompt:</p>
 <blockquote><p>Classify the text into neutral, negative or positive.<br/>
