--- a/kexizeroing.github.io/Add watermark to images.html
+++ b/kexizeroing.github.io/Add watermark to images.html
@@ -8,6 +8,7 @@ added: "Dec 1 2022"
 tags: [code]</p>
 <h2>updatedDate: "July 21 2024"</h2>
 <p>Image watermarking is the process of placing an overlay text on top of the original image, usually in one of the corners. The first approach shown below is primarily based on the HTML5 <code>&lt;canvas&gt;</code> element while the second one uses <a href="https://brianium.github.io/watermarkjs">watermark.js</a> library, which requires just a few lines of code.</p>
+<h2>Use HTML Canvas</h2>
 <pre><code class="lang-html">&lt;body&gt;
   &lt;h1&gt;Add Watermark to Image&lt;/h1&gt;
   &lt;p&gt;
@@ -30,7 +31,7 @@ tags: [code]</p>
     const originalImage = new Image();
 
     fileInput.addEventListener("change", async (e) =&gt; {
-      const [file] = fileInput.files;
+      const file = e.target.files[0];
       originalImage.src = await fileToDataUri(file);
     });
 
@@ -84,6 +85,31 @@ tags: [code]</p>
 <blockquote><p>Data URLs, URLs prefixed with the <code>data:</code> scheme, allow content creators to embed small files inline in documents. They are composed of four parts: a prefix (<code>data:</code>), a MIME type, an optional base64 token if non-textual, and the data itself: <code>data:[&lt;mediatype&gt;][;base64],&lt;data&gt;</code></p>
 <p><code>toDataURL()</code> encodes the whole image in an in-memory string. For larger images, this can have performance implications, and may even overflow browsers' URL length limit when assigned to <code>HTMLImageElement.src</code>. You should generally prefer <code>HTMLCanvasElement.toBlob()</code> instead, in combination with <code>URL.createObjectURL()</code>.</p>
 </blockquote>
+<h3>Add custom cropper</h3>
+<pre><code class="lang-js">// https://advanced-cropper.github.io/vue-advanced-cropper/
+&lt;Cropper
+  class="cropper"
+  :src="imageSrc"
+  :stencil-props="{
+    aspectRatio: 16 / 9
+  }"
+  ref="cropperRef"
+/&gt;
+
+const handleCropSubmit = () =&gt; {  
+  const { canvas } = cropperRef.value.getResult()
+  if (canvas) {
+    canvas.toBlob((blob) =&gt; {
+      if (blob) {
+        // new File(fileBits, fileName, options)
+        const file = new File([blob], 'cropped-image.png', { type: 'image/png' })
+        handleFileUpload(file);
+      }
+    }, 'image/png')
+  }
+};
+</code></pre>
+<h2>Use third-party library</h2>
 <pre><code class="lang-js">// Use the library `watermark.js` in the browser.
 // image as watermark
 watermark(['/img/shepherd.jpg', '/img/logo.png'])
