--- a/kexizeroing.github.io/CSS effects collection.html
+++ b/kexizeroing.github.io/CSS effects collection.html
@@ -211,7 +211,10 @@ tags: [css]</p>
 &lt;/div&gt;
 </code></pre>
 <h3>Color Palettes</h3>
-<p>Builds a wide gamut color palette with okLCH and inspects color with devtools. Check out <a href="https://www.youtube.com/watch?v=6aCsAMgwnjE">https://www.youtube.com/watch?v=6aCsAMgwnjE</a></p>
+<ul>
+<li>Build a wide gamut color palette with okLCH and inspects color with devtools: <a href="https://www.youtube.com/watch?v=6aCsAMgwnjE">https://www.youtube.com/watch?v=6aCsAMgwnjE</a></li>
+<li>Create a custom palette: <a href="https://www.radix-ui.com/colors/custom">https://www.radix-ui.com/colors/custom</a></li>
+</ul>
 <p>&lt;img alt="okLCH Color Palettes" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vOhrAly1he4xakrh5qj30tg0ka0ts.jpg" width="500"&gt;</p>
 <pre><code class="lang-html">&lt;style&gt;
   html {
