--- a/kexizeroing.github.io/Debugging CSS.html
+++ b/kexizeroing.github.io/Debugging CSS.html
@@ -167,6 +167,8 @@ body:after {
 </code></pre>
 </li>
 <li><p>A dialog is a component in a web page or app that usually contains an action or some task to perform. Dialogs have a role of <code>dialog</code>, which the browser will assign automatically for you when you use the <code>&lt;dialog&gt;</code> element. You can also create dialogs with ARIA: apply <code>role="dialog"</code> to an element like <code>&lt;div&gt;</code>. If it is a modal dialog, add <code>aria-modal="true"</code> when it shows, and remove it when it is dismissed. Dialogs can be modal (when shown with <code>dialog.showModal()</code>) or non modal (when shown with <code>dialog.show()</code>). When <code>&lt;dialog&gt;</code>s are modal, the browser will treat the content outside of the dialog as inert, and prevent keyboard focus from reaching web content outside of the dialog. If a <code>&lt;dialog&gt;</code> is not modal, the other content is not treated as inert. Browsers will close modal dialogs when users press <code>Escape</code>. Non-modal dialogs don't get this default behaviour, developers can add it where it makes sense. Check out the <a href="https://talks.hiddedevries.nl/G9mATs/slides">slides</a> about how to build dialogs and popovers.</p>
+<blockquote><p><code>&lt;dialog&gt;</code> examples demo (default, error, wait, notify, confirm, transitioned, light dismiss, fully customized): <a href="https://codepen.io/argyleink/pen/VwJvqrW">https://codepen.io/argyleink/pen/VwJvqrW</a></p>
+</blockquote>
 </li>
 <li><p>CSS <code>unset</code> will remove all properties set directly on the matched element, and revert to inheriting from the cascade - like a parent element or <code>&lt;body&gt;</code> (if the property naturally inherits from its parent); <code>inherit</code> is pretty straight-forward that inherits all defined properties from its parent element. <code>revert</code> will set the property to the user agent stylesheet value — AKA the default browser style. <code>initial</code> is the nuclear option. This will reset a CSS property as if no CSS rules had been written for that value, which means it’s gonna remove the style all together.</p>
 <pre><code class="lang-html">&lt;!-- What color is the &lt;p&gt; tag’s text? --&gt;
@@ -180,6 +182,8 @@ so it inherits from its parent – body. --&gt;
   .hello { color: unset; }
 &lt;/style&gt;
 </code></pre>
+<blockquote><p>Children of parents with <code>min-height</code> can't inherit the height property. The easiest workaround is to add <code>height: 1px;</code> to the parent. Alternatively you may set <code>min-height: inherit;</code> to the child.</p>
+</blockquote>
 </li>
 <li><p>Stop re-inventing the wheel and just use <code>&lt;button&gt;</code> to create a button. If you're worried about default button styles, use <code>all: unset</code>. This one line of CSS will strip all default browser styles so you can apply your own.</p>
 </li>
