--- a/kexizeroing.github.io/Fetch API requests and CORS.html
+++ b/kexizeroing.github.io/Fetch API requests and CORS.html
@@ -173,8 +173,8 @@ curl -d '{"key1":"value1", "key2":"value2"}' -H "Content-Type: application/json"
 <ol>
 <li><p>What does <code>body-parser</code> do with express? Originally, there was only <code>body-parser</code>, not <code>express.json()</code>. <code>body-parser</code> extracts the entire body portion of an incoming request stream and exposes it on <code>req.body</code>. As of Express version 4.16+, their own <code>body-parser</code> implementation is now included in the default Express package so there is no need for you to download another dependency.</p>
 <pre><code class="lang-js"> app.use(express.json());
- // Parsing the URL-encoded data with the `querystring` library (when false) or the `qs` library (when true).
- // To be simple,`querystring` cannot parse nested object.
+ // Parsing the URL-encoded data with the `querystring` library (when false) or the `qs` library (when true). To be simple,`querystring` cannot parse nested object.
+ // test the differences: https://stackblitz.com/edit/node-xa27zd?file=index.js
  app.use(express.urlencoded({ extended: false }));
 </code></pre>
 </li>
