--- a/kexizeroing.github.io/Intro to Bun.html
+++ b/kexizeroing.github.io/Intro to Bun.html
@@ -6,7 +6,7 @@ slug: intro-to-bun
 description: ""
 added: "Jan 22 2024"
 tags: [web]</p>
-<h2>updatedDate: "Jan 28 2024"</h2>
+<h2>updatedDate: "Jan 31 2024"</h2>
 <p>Bun is a fast, all-in-one toolkit for running, building, testing, and debugging JavaScript and TypeScript, from a single file to a full-stack application. The goal of Bun is to run most of the world's server-side JavaScript and provide tools to improve performance, reduce complexity, and multiply developer productivity.</p>
 <ul>
 <li>Bun is a fast JavaScript runtime, written in Zig and uses Apple’s JS Core instead of Chrome’s V8.</li>
@@ -54,6 +54,12 @@ bun run
 </code></pre>
 <p>Bun aims for complete Node.js API compatibility. Most npm packages intended for Node.js environments will work with Bun out of the box.</p>
 <p>Bun has native support for CommonJS and ES modules. If the target module is an ES Module, <code>require</code> returns the module namespace object (equivalent to <code>import * as</code>). If the target module is a CommonJS module, <code>require</code> returns the <code>module.exports</code> object as in Node.js. You can use <code>import</code> or <code>require</code> in the same file—they both work, all the time.</p>
+<pre><code class="lang-js">// You can `require()` any file or package, even .ts or .mjs files.
+// You can `import` any file or package, even .cjs files.
+import { hello } from "./hello.ts";
+import { stuff } from "./my-commonjs.cjs";
+const { bar } = require("./bar.mjs");
+</code></pre>
 <h2>HTTP server</h2>
 <p>To start a high-performance HTTP server with a clean API, the recommended approach is <code>Bun.serve</code>.</p>
 <pre><code class="lang-js">Bun.serve({
@@ -80,6 +86,8 @@ await Bun.write("output.txt", data);
 <pre><code class="lang-js">import.meta.dir;   // =&gt; "/path/to/project"
 import.meta.file;  // =&gt; "file.ts"
 import.meta.path;  // =&gt; "/path/to/project/file.ts"
+import.meta.url;   // =&gt; "file:///path/to/project/file.ts"
+
 import.meta.env;   // An alias to `process.env`
 </code></pre>
 <h2>Package Manager</h2>
@@ -144,7 +152,8 @@ console.log(result); // 6\n
 <h2>Build an HTTP server using Hono and Bun</h2>
 <p>Bun is another JavaScript runtime. Hono also works on Bun.</p>
 <p>Hono is a server-side lightweight web framework similar to Express but with modern features. It supports a ton of different server runtimes, including Deno, Bun, Cloudflare Workers, Node.js, and more.</p>
-<pre><code class="lang-sh">bun create hono my-app
+<pre><code class="lang-sh"># create a new project with a `create-&lt;template&gt;` npm package
+bun create hono my-app
 
 cd my-app
 bun install
@@ -189,8 +198,11 @@ app.get('/', (c) =&gt; {
 const port = parseInt(process.env.PORT!) || 3000
 console.log(`Running at http://localhost:${port}`)
 
+// export default app
 export default {
   port,
   fetch: app.fetch
 };
 </code></pre>
+<blockquote><p>Hono supports TypeScript as a first-class. One of Hono’s unique features is its <a href="https://hono.dev/docs/guides/rpc">RPC</a> capability, which allows the server and client to share specifications using TypeScript types. This is something other frameworks don’t typically offer.</p>
+</blockquote>
