--- a/kexizeroing.github.io/Learn from Advent of Vue 2022.html
+++ b/kexizeroing.github.io/Learn from Advent of Vue 2022.html
@@ -223,6 +223,41 @@ const fullName = computed({
 fullName.value = 'Michael Thiessen';
 console.log(lastName.value);      // 'Thiessen'
 </code></pre>
+<h3>Slots in Vue</h3>
+<pre><code class="lang-vue">&lt;template&gt;
+  &lt;div class="named-slot"&gt;
+    &lt;h2&gt;&lt;slot name="title"&gt;default&lt;/slot&gt;&lt;/h2&gt;
+    &lt;slot&gt;&lt;/slot&gt;
+  &lt;/div&gt;
+
+  &lt;div class="scoped-slot"&gt;
+    &lt;h2&gt;&lt;slot&gt;default&lt;/slot&gt;&lt;/h2&gt;
+    &lt;slot name="display" :number="likeCount" :message="message"&gt;&lt;/slot&gt;
+    &lt;button type="button" @click="handleClick"&gt;Like&lt;/button&gt;
+  &lt;/div&gt;
+&lt;/template&gt;
+</code></pre>
+<pre><code class="lang-vue">&lt;template&gt;
+  &lt;SlotsNamed&gt;
+    &lt;template #title&gt;
+      &lt;span&gt;My Title&lt;/span&gt;
+    &lt;/template&gt;
+    &lt;template #default&gt;
+      &lt;p&gt;Put me in, coach!&lt;/p&gt;
+    &lt;/template&gt;
+  &lt;/SlotsNamed&gt;
+
+  &lt;SlotsScoped&gt;
+    &lt;template #default&gt;
+      &lt;span&gt;My Likes&lt;/span&gt;
+    &lt;/template&gt;
+    &lt;template #display="{ number, message }"&gt;
+      &lt;p&gt;{{ number }}&lt;/p&gt;
+      &lt;p&gt;{{ message }}&lt;/p&gt;
+    &lt;/template&gt;
+  &lt;/SlotsScoped&gt;
+&lt;/template&gt;
+</code></pre>
 <h3>Renderless Components</h3>
 <p>Renderless components can be an alternative to composables when finding ways to design reusable logic in your Vue apps. As you might guess, they don't render anything. Instead, they handle all the logic inside a script section and then expose properties through a scoped slot.</p>
 <p>Many components are contentless components. They provide a container, and you have to supply the content. Think of a button, a menu, or a card component. Slots allow you to pass in whatever markup and components you want, and they also are relatively open-ended, giving you lots of flexibility.</p>
