--- a/kexizeroing.github.io/Notes on domain-specific ChatGPT.html
+++ b/kexizeroing.github.io/Notes on domain-specific ChatGPT.html
@@ -157,6 +157,8 @@ const completionResponse = await openai.createCompletion({
   temperature: 0, // Set to 0 for deterministic results
 })
 </code></pre>
+<blockquote><p><a href="https://alexgarcia.xyz/blog/2024/sqlite-vec-stable-release/index.html">sqlite-vec</a> is a SQLite extension written purely in C with no dependencies, runs anywhere SQLite runs. It will provide custom SQL functions and virtual tables for fast vector search, as well as other tools and utilities for working with vectors.</p>
+</blockquote>
 <h3>Domain-specific ChatGTP Starter App</h3>
 <p><a href="https://github.com/gannonh/gpt3.5-turbo-pgvector">This starter app</a> uses embeddings to generate a vector representation of a document, and then uses vector search to find the most similar documents to the query. The results of the vector search are then used to construct a prompt for GPT-3, which is then used to generate a response. The response is then streamed to the user.</p>
 <p>Creating and storing the embeddings: See <a href="https://github.com/gannonh/gpt3.5-turbo-pgvector/blob/master/pages/embeddings.tsx">pages/embeddings.tsx</a> and <a href="https://github.com/gannonh/gpt3.5-turbo-pgvector/blob/master/pages/api/generate-embeddings.ts">pages/api/generate-embeddings.ts</a></p>
