--- a/kexizeroing.github.io/Pixel, resolution and fps.html
+++ b/kexizeroing.github.io/Pixel, resolution and fps.html
@@ -34,6 +34,10 @@ primarily based on pixel density of the screen and image type.
 */
 background-image: image-set("cat.png" 1x, "cat-2x.png" 2x);
 </code></pre>
+<h3>Viewport meta tag</h3>
+<p>The browser's viewport is the area of the window in which web content can be seen. When we started surfing the internet using tablets and mobile phones, fixed size web pages were too large to fit the viewport.</p>
+<p>Some mobile devices render pages in a virtual viewport, which is usually wider than the screen, and then shrink the rendered result down so it can all be seen at once. Users can then zoom and pan to look more closely at different areas of the page. For example, if a mobile screen has a width of 640px, pages might be rendered with a virtual viewport of 980px, and then it will be shrunk down to fit into the 640px space. This virtual viewport is a way to make non-mobile-optimized sites in general look better on narrow screen devices.</p>
+<p>The viewport meta tag allows you to tell the mobile browser what size this virtual viewport should be. A typical mobile-optimized site contains something like <code>&lt;meta name="viewport" content="width=device-width, initial-scale=1" /&gt;</code>.</p>
 <h2>requestAnimationFrame</h2>
 <p>The smoothness of an animation depends on the frame rate of the animation. Frame rate is measured in <strong>frames per second (fps)</strong>. More frames, means more processing, which can often cause skipping. This is what is meant by the term <strong>dropping frames</strong>. Most screens have a refresh rate of 60Hz (<code>1000ms / 60fps = 16.7ms</code>), it’s useless to perform a repaint if the screen cannot show it due to its limitations. <em>By the way, <code>setTimeout(animFrame, 1000 / 60)</code> is used in old animation libraries.</em></p>
 <pre><code class="lang-js">// normal refresh rate
