--- a/kexizeroing.github.io/State management clone.html
+++ b/kexizeroing.github.io/State management clone.html
@@ -68,3 +68,58 @@ store.dispatch({
   payload: 1
 })
 </code></pre>
+<h3>Zustand and XState Store</h3>
+<pre><code class="lang-js">import { create } from 'zustand'
+
+type State = {
+  count: number
+}
+
+type Actions = {
+  increment: (qty: number) =&gt; void
+  decrement: (qty: number) =&gt; void
+}
+
+const useCountStore = create&lt;State &amp; Actions&gt;((set) =&gt; ({
+  count: 0,
+  increment: (qty: number) =&gt; set((state) =&gt; ({
+    count: state.count + qty
+  })),
+  decrement: (qty: number) =&gt; set((state) =&gt; ({
+    count: state.count - qty
+  })),
+}));
+
+const Component = () =&gt; {
+  const count = useCountStore((state) =&gt; state.count);
+  const increment = useCountStore((state) =&gt; state.increment);
+  const decrement = useCountStore((state) =&gt; state.decrement);
+  // ...
+}
+</code></pre>
+<pre><code class="lang-js">import { createStore } from '@xstate/store';
+import { useSelector } from '@xstate/store/react';
+
+const store = createStore(
+  // context
+  {
+    count: 0
+  },
+  // transitions
+  {
+    increment: (context, { qty }: { qty: number }) =&gt; ({
+      count: context.count + qty;
+    }),
+    decrement: (context, { qty }: { qty: number }) =&gt; ({
+      count: context.count - qty;
+    })
+  }
+);
+
+const Component = () =&gt; {
+  const count = useSelector(store, (state) =&gt; state.context.count);
+  const increment = (qty) =&gt; store.send({ type: 'increment', qty });
+  const decrement = (qty) =&gt; store.send({ type: 'decrement', qty });
+  // ...
+}
+</code></pre>
