--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8848 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8852 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=kexizeroing.github.io/Run%20MySQL%20locally%20and%20query%20it%20with%20Express.html>2024-08-07 Run MySQL locally and query it with Express</a></li>
+
+<li><a href=blog.forecho.com/RichCalls%20Warden%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97.html>2024-08-06 RichCalls Warden 使用指南</a></li>
+
+<li><a href=kexizeroing.github.io/Algorithm%20basics%20and%20sample%20problems.html>2024-08-06 Algorithm basics and sample problems</a></li>
+
+<li><a href=kexizeroing.github.io/Bitwise%20operations%20and%20related%20concepts.html>2024-08-06 Bitwise operations and related concepts</a></li>
+
+<li><a href=yuanj.top/%E6%96%87%E7%8C%AE%E5%88%86%E4%BA%AB%7C%E5%A4%9A%E7%BB%84%E5%AD%A6%E6%8F%AD%E7%A4%BA%E9%A6%99%E8%95%89%E7%9A%AE%E8%A4%90%E5%8F%98%E8%BF%87%E7%A8%8B%E4%B8%AD%E4%BD%8E%E6%B8%A9%E8%AF%B1%E5%AF%BC%E7%9A%84%20WRKY%20%E5%9B%A0%E5%AD%90%E8%B0%83%E6%8E%A7%E7%BD%91%E7%BB%9C%E9%87%8D%E6%9E%84.html>2024-08-05 文献分享|多组学揭示香蕉皮褐变过程中低温诱导的 WRKY 因子调控网络重构</a></li>
+
+<li><a href=mabbs.github.io/%E5%8D%8E%E4%B8%BA%E4%BB%93%E9%A2%89%E8%AF%AD%E8%A8%80%E4%BD%BF%E7%94%A8%E4%BD%93%E9%AA%8C.html>2024-08-03 华为仓颉语言使用体验</a></li>
 
 <li><a href=iphyer.github.io/USA%E5%8D%B0%E8%B1%A121%3A%20Santa%20Fe%20%E6%B8%B8%E8%AE%B0.html>2024-07-28 USA印象21: Santa Fe 游记</a></li>
 
@@ -2143,8 +2155,6 @@
 
 <li><a href=shiina18.github.io/%E6%AD%A3%E5%88%99%E7%81%BE%E9%9A%BE%E6%80%A7%E5%9B%9E%E6%BA%AF%E4%B8%8E%E9%98%B2%E5%BE%A1%E6%96%B9%E6%B3%95.html>2022-12-10 正则灾难性回溯与防御方法</a></li>
 
-<li><a href=kexizeroing.github.io/Algorithm%20Basics.html>2022-12-09 Algorithm Basics</a></li>
-
 <li><a href=kexizeroing.github.io/Frontend%20interview%20questions.html>2022-12-09 Frontend interview questions</a></li>
 
 <li><a href=tifa-233.com/VP%E8%AE%B0%E5%BD%95%20-%202022%20ICPC%20%E4%BA%9A%E6%B4%B2%E5%8C%BA%E5%9F%9F%E8%B5%9B%28%E6%9D%AD%E5%B7%9E%29.html>2022-12-09 VP记录 - 2022 ICPC 亚洲区域赛(杭州)</a></li>
@@ -2476,8 +2486,6 @@
 <li><a href=young-lord.github.io/%E6%88%91%E7%9A%84%20YANL%20%E7%AC%94%E8%AE%B0%E6%B3%95.html>2022-10-15 我的 YANL 笔记法</a></li>
 
 <li><a href=kexizeroing.github.io/Notes%20on%20work%20projects%20%28in%20Chinese%29.html>2022-10-14 Notes on work projects (in Chinese)</a></li>
-
-<li><a href=kexizeroing.github.io/Bitwise%20operations.html>2022-10-14 Bitwise operations</a></li>
 
 <li><a href=kexizeroing.github.io/React%20hooks%20clone.html>2022-10-14 React hooks clone</a></li>
 
