--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -37,6 +37,7 @@ top: true</p>
 <hr/>
 <h2>Tools and Cool websites</h2>
 <p>Chrome urls: <a href="chrome://chrome-urls/">chrome://chrome-urls</a></p>
+<p>Let Me DuckDuckGo That For You: <a href="https://lmddgtfy.net">https://lmddgtfy.net</a></p>
 <p>A collective list of free APIs: <a href="https://github.com/public-apis/public-apis">https://github.com/public-apis/public-apis</a></p>
 <p>Console Utilities API reference: <a href="https://developer.chrome.com/docs/devtools/console/utilities/">https://developer.chrome.com/docs/devtools/console/utilities/</a></p>
 <p>Tips to get more comfortable with DevTools: <a href="https://devtoolstips.org/">https://devtoolstips.org/</a></p>
@@ -212,7 +213,7 @@ top: true</p>
 <p>New to the web platform (every month): <a href="https://web.dev/blog/web-platform-01-2024">https://web.dev/blog/web-platform-01-2024</a></p>
 <p>Monitor and track the status of all Web Platform features: <a href="https://webstatus.dev">https://webstatus.dev</a></p>
 <hr/>
-<h2>Awesome ChatGPT</h2>
+<h2>Awesome LLMs</h2>
 <p>OpenAI Cookbook: <a href="https://github.com/openai/openai-cookbook">https://github.com/openai/openai-cookbook</a></p>
 <p>Awesome ChatGPT Prompts: <a href="https://prompts.chat">https://prompts.chat</a></p>
 <p>Prompt Engineering Guide: <a href="https://github.com/dair-ai/Prompt-Engineering-Guide">https://github.com/dair-ai/Prompt-Engineering-Guide</a></p>
@@ -254,6 +255,7 @@ top: true</p>
 <p>Starter project for the Vercel AI SDK RAG guide: <a href="https://github.com/vercel/ai-sdk-rag-starter">https://github.com/vercel/ai-sdk-rag-starter</a></p>
 <p>Build AI apps locally that can do document Q&amp;A: <a href="https://github.com/ykhli/local-ai-stack">https://github.com/ykhli/local-ai-stack</a></p>
 <p>Anthropic's educational courses: <a href="https://github.com/anthropics/courses">https://github.com/anthropics/courses</a></p>
+<p>An Open Course on LLMs taught by practitioners: <a href="https://hamel.dev/blog/posts/course">https://hamel.dev/blog/posts/course</a></p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Gain the skills you need to do independent data science projects: <a href="https://www.kaggle.com/learn">https://www.kaggle.com/learn</a></p>
