--- a/kexizeroing.github.io/Frontend interview questions.html
+++ b/kexizeroing.github.io/Frontend interview questions.html
@@ -7,7 +7,7 @@ description: ""
 added: ""
 top: true
 order: 5</p>
-<h2>updatedDate: "Apr 7 2024"</h2>
+<h2>updatedDate: "Aug 5 2024"</h2>
 <p>更全面的准备可以参考:</p>
 <ul>
 <li><a href="https://hzfe.github.io/awesome-interview">https://hzfe.github.io/awesome-interview</a></li>
@@ -67,9 +67,8 @@ concurrencyRequest(urls, 3).then(res =&gt; {
   console.log(res);
 })
 </code></pre>
-<p><code>Promise.all</code> 用来并发处理异步任务，但是并发数有时候需要限制，多个并发请求可能会对服务端产生压力，<a href="https://github.com/sindresorhus/p-limit">p-limit</a> 这个库就是用来限制并发数的。核心原理就是在一个循环中，从请求池中取出请求并发送，直到当前并发请求数 current 达到最大并发数或请求池 queue 变为空。对于每个出队的请求，它首先增加 current 的值，然后调用函数来发送请求。当请求完成后，它会减少 current 的值并再次调用出队函数，处理下一个请求。类似的库有很多，可以看看 <a href="https://github.com/sindresorhus/promise-fun">https://github.com/sindresorhus/promise-fun</a></p>
 <ol>
-<li>Implement <code>Promise.all</code> by yourself.
+<li>Implement <code>Promise.all</code> and <code>Promise.resolve</code> by yourself.
 <code>``js
 Promise._all = function (promises) {
 return new Promise((resolve, reject) =&gt; {
@@ -91,8 +90,7 @@ return new Promise((resolve, reject) =&gt; {
 });
 };</li>
 </ol>
-<p>// Also implement <code>Promise.resolve</code> and <code>Promise.reject</code>
-Promise._resolve = function (value) {
+<p>Promise._resolve = function (value) {
   if (value instanceof Promise) {
     return value;
   } else {
@@ -101,11 +99,68 @@ Promise._resolve = function (value) {
     });
   }
 };</p>
-<p>Promise._reject = function (reason) {
-  return new Promise((resolve, reject) =&gt; reject(reason));
+<pre><code>
+3. Convert a list of objects into a tree.
+
+```js
+let list = [
+  { id: 1, name: 'node1', pid: 0 },
+  { id: 2, name: 'node2', pid: 1 },
+  { id: 3, name: 'node3', pid: 1 },
+  { id: 4, name: 'node4', pid: 3 },
+  { id: 5, name: 'node5', pid: 4 },
+  { id: 6, name: 'node6', pid: 0 },
+]
+
+function listToTree(list) {
+  const map = {}
+  const roots = []
+
+  list.forEach(item =&gt; {
+    map[item.id] = { ...item, children: [] }
+  })
+
+  list.forEach(item =&gt; {
+    if (item.pid === 0) {
+      roots.push(map[item.id])
+    } else {
+      if (map[item.pid]) {
+        map[item.pid].children.push(map[item.id])
+      }
+    }
+  })
+
+  return roots
+}
+</code></pre>
+<ol>
+<li><p>Implement <code>debounce</code> and <code>throttle</code>.
+```js
+function debounce(fn, time) {
+let timer = null</p>
+<p>return (...args) =&gt; {
+ if (timer) {
+   clearTimeout(timer)
+   timer = null
+ }
+ timer = setTimeout(() =&gt; {
+   fn(...args)
+ }, time)
+}
+}</p>
+</li>
+</ol>
+<p>function throttle(fn, delay) {
+  let currentTime = Date.now()</p>
+<p>return (...args) =&gt; {
+    if (Date.now() - currentTime &gt; delay) {
+      fn(...args)
+      currentTime = Date.now()
+    }
+  }
 }</p>
 <pre><code>
-3. Implement calling click event listener only once without using `{once: true}`.
+5. Implement calling click event listener only once without using `{once: true}`.
 ```js
 function clickOnce(el, cb) {
   const cb2 = () =&gt; {
@@ -118,24 +173,24 @@ function clickOnce(el, cb) {
 clickOnce($0, () =&gt; console.log('click'));
 </code></pre>
 <ol>
-<li><p>Use setTimeout to invoke a function multiple times in the fixed interval.
+<li><p>Use <code>setTimeout</code> to invoke a function multiple times in the fixed interval.
 ```js
 function repeat(func, times, ms, immediate) {
 let count = 0;</p>
-<p>function inner(...args) {
- count++;<br/>
- if (count === 1 &amp;&amp; immediate) {
-   func.call(null, ...args);
+<p>return function inner(...args) { 
+ if (count === 0 &amp;&amp; immediate) {
+   func(...args);
+   count++; 
  }
  if (count &gt;= times) {
    return;
  }
  setTimeout(() =&gt; {
-   inner.call(null, ...args);
-   func.call(null, ...args);
+   func(...args);
+   count++;
+   inner(...args);
  }, ms);
-}</p>
-<p>return inner;
+}
 }</p>
 </li>
 </ol>
@@ -143,7 +198,7 @@ let count = 0;</p>
 const repeatFunc = repeat(console.log, 4, 3000, true);
 repeatFunc("hello");</p>
 <pre><code>
-5. Implement the render function to convert the virtual dom JSON to real DOM.
+7. Implement the render function to convert the virtual dom JSON to real DOM.
 ```js
 function render(vnode) {
   const { tag, props, children } = vnode;
@@ -174,33 +229,51 @@ function render(vnode) {
 }
 </code></pre>
 <ol>
-<li><p>How to add two big integers in js?</p>
-<pre><code class="lang-js">function add(A, B) {
-const AL = A.length
-const BL = B.length
-const ML = Math.max(AL, BL)
-
-let carry = 0, sum = ''
-
-for (let i = 1; i &lt;= ML; i++) {
- let a = +A.charAt(AL - i)
- let b = +B.charAt(BL - i)
-
- let t = carry + a + b
- carry = Math.floor(t / 10)
- t %= 10
-
- sum = (i === ML &amp;&amp; carry)
-   ? carry * 10 + t + sum
-   : t + sum
-}
-
-return sum
-}
-</code></pre>
+<li><p>Implement the functionality of <code>lodash.get</code>.
+```js
+// _.get(object, path, [defaultValue])
+function get(obj, path, defaultValue = undefined) {
+const keys = Array.isArray(path) ? path : path.split('.');
+let result = obj;</p>
+<p>for (const key of keys) {
+ if (result == null || typeof result !== 'object') {
+   return defaultValue;
+ }
+ result = result[key];
+}</p>
+<p>return result === undefined ? defaultValue : result;
+}</p>
 </li>
 </ol>
-<pre><code class="lang-js">const max = BigInt(Number.MAX_SAFE_INTEGER);
-const two = 2n;
-const result = max + two;
+<p>// test
+const obj = { a: { b: { c: 42 } } };
+console.log(get(obj, 'a.b.c')); // 42
+console.log(get(obj, ['a', 'b', 'c'])); // 42
+console.log(get(obj, 'a.b.d', 'default')); // 'default'
+console.log(get(obj, 'x.y.z', 'not found')); // 'not found'</p>
+<pre><code>
+9.  How to add two big integers in js?
+```js
+function add(A, B) {
+  const AL = A.length
+  const BL = B.length
+  const ML = Math.max(AL, BL)
+
+  let carry = 0, sum = ''
+
+  for (let i = 1; i &lt;= ML; i++) {
+    let a = +A.charAt(AL - i)
+    let b = +B.charAt(BL - i)
+
+    let t = carry + a + b
+    carry = Math.floor(t / 10)
+    t %= 10
+
+    sum = (i === ML &amp;&amp; carry)
+      ? carry * 10 + t + sum
+      : t + sum
+  }
+
+  return sum
+}
 </code></pre>
