--- a/kexizeroing.github.io/Intro to TypeScript.html
+++ b/kexizeroing.github.io/Intro to TypeScript.html
@@ -6,10 +6,9 @@ slug: intro-to-typescript
 description: ""
 added: "Jun 12 2022"
 tags: [js]</p>
-<h2>updatedDate: "July 23 2024"</h2>
+<h2>updatedDate: "Aug 3 2024"</h2>
 <blockquote><p>There is a broad spectrum of what TypeScript can give you. On the one side of this spectrum, we have: writing good old JavaScript, without types or filling the gaps with any, and after the implementation is done — fixing the types. On the other side of the spectrum, we have type-driven development. Read from <a href="https://www.aleksandra.codes/fighting-with-ts">https://www.aleksandra.codes/fighting-with-ts</a></p>
 <p>TypeScript allows you to write complex yet elegant code. Some TypeScript users love to explore the possibilities of the type system and love to encode logic at type level. This practice is known as type gymnastics. The community also helps users to learn type gymnastics by creating fun and challenges such as <a href="https://github.com/type-challenges/type-challenges">type challenges</a>.</p>
-<p>Cheatsheets for experienced React developers getting started with TypeScript: <a href="https://react-typescript-cheatsheet.netlify.app">https://react-typescript-cheatsheet.netlify.app</a></p>
 <p>Total TypeScript book: <a href="https://github.com/total-typescript/total-typescript-book/tree/main/book-content/chapters">https://github.com/total-typescript/total-typescript-book/tree/main/book-content/chapters</a></p>
 </blockquote>
 <p>TypeScript is a strongly typed programming language that builds on JavaScript. It is currently developed and maintained by Microsoft as an open source project. TypeScript supports multiple programming paradigms such as functional, generic, imperative, and object-oriented.</p>
@@ -57,7 +56,8 @@ yarn add --dev typescript
 }
 </code></pre>
 <p><code>target</code> tells TS which ES specification you want the transpiled code to support. Whatever you choose for <code>target</code> affects the default value of <code>lib</code> which in turn tells TS what type definitions to include in your project. If you need any extra polyfill in your project, <code>lib</code> is how to make TS happy about it. For example, you need to support IE11 but also you would like to use promises. IE11 supports ES5, but promises is an ES6 feature. You import a promises polyfill, but TS is still giving an error. Now you just need to tell TypeScript that your code will target ES5 (<code>"target": "es5"</code>) and it's safe to use promises in the codebase: <code>"lib": ["dom", "es5", "es2015.promise"]</code>.</p>
-<blockquote><p>In addition to the base functionality of ES2015/ES6, ES2020 adds support for dynamic imports, and <code>import.meta</code> while ES2022 further adds support for top level await. <code>ESNext</code> is a dynamic name that refers to whatever the next version is at the time of writing. ESNext features are more correctly called proposals, because, by definition, the specification has not been finalized yet.</p>
+<p><code>module</code> is a setting with a bunch of different options. But really, there are only two modern options. <code>NodeNext</code> tells TypeScript that your code will be run by Node.js. And <code>Preserve</code> tells TypeScript that an external bundler will handle the bundling.</p>
+<blockquote><p>In <code>ESNext</code> you aren’t allowed to write <code>import Foo = require("foo")</code> because we assume there is no <code>require</code>. <strong><code>module: "ESNext"</code> is required with <code>moduleResolution: "bundler"</code></strong>. In <code>NodeNext</code>, we know that a given module might be an ES module or it might be a CJS module, based on its file extension(<code>mjs</code>, <code>.cjs</code>) and/or the <code>type</code> field in the nearest<code>package.json</code> file.</p>
 </blockquote>
 <p>See examples:</p>
 <ul>
@@ -224,6 +224,19 @@ type TodoPreview = Pick&lt;Todo, "title" | "completed"&gt;
 type User = ReturnType&lt;typeof createUser&gt;
 // collect all arguments from a function in a tuple
 type Param = Parameters&lt;typeof createUser&gt;
+</code></pre>
+<pre><code class="lang-tsx">// https://www.totaltypescript.com/react-component-props-type-helper
+import { ComponentProps } from "react"
+
+type ButtonProps = ComponentProps&lt;"button"&gt;
+// "button" | "submit" | "reset" | undefined
+type ButtonPropsType = ButtonProps["type"]
+
+type MyDivProps = ComponentProps&lt;"div"&gt; &amp; {
+  myProp: string
+}
+
+type MyCompProps = ComponentProps&lt;typeof MyComp&gt;
 </code></pre>
 <p>In TypeScript, every function has a return type. If we don’t explicitly type or infer, the return type is by default <code>void</code>, and <code>void</code> is a keyword in JavaScript returning <code>undefined</code>.</p>
 <p><strong>Declaration merging for interfaces</strong> means we can declare an interface at separate positions with different properties, and TypeScript combines all declarations and merges them into one. You use <code>declare</code> to let TypeScript know that the variable exists, even though it's not declared in the code.</p>
@@ -409,3 +422,5 @@ npx tsc --init
 </blockquote>
 <p>How to run ts files from command line? There is <a href="https://github.com/TypeStrong/ts-node">ts-node</a> that will compile the code and REPL for node.js: <code>npx ts-node src/foo.ts</code>. <code>tsc</code> writes js to disk. <code>ts-node</code> doesn't need to do that and runs ts on the fly.</p>
 <p><code>ts-node/register</code> is used for registering the TypeScript compiler (<code>ts-node</code>) to handle the compilation of TypeScript files on the fly. When you run a Node.js application written in TypeScript, the TypeScript code needs to be transpiled into JavaScript before it can be executed by the Node.js runtime. The <code>ts-node/register</code> module helps simplify this process by allowing you to execute TypeScript files directly without explicitly precompiling them.</p>
+<blockquote><p>Run JS/TS file on Node.js using Vite's resolvers and transformers: <code>npx vite-node index.ts</code>. <a href="https://www.npmjs.com/package/vite-node">vite-node</a> is the engine that powers Vitest and Nuxt 3 Dev SSR. It supports ESM &amp; TypeScript out of the box.</p>
+</blockquote>
