--- a/kexizeroing.github.io/JavaScript String, Array and Object.html
+++ b/kexizeroing.github.io/JavaScript String, Array and Object.html
@@ -6,10 +6,21 @@ slug: js-string-array-object
 description: ""
 added: "Aug 6 2020"
 tags: [js]</p>
-<h2>updatedDate: "Feb 28 2024"</h2>
+<h2>updatedDate: "Aug 4 2024"</h2>
 <h2>String</h2>
-<h3>string primitives and String objects</h3>
-<p>Note that JavaScript distinguishes between String objects and primitive string values (The same is true of Boolean and Numbers). In contexts where a method is to be invoked on a primitive string or a property lookup occurs, JavaScript will automatically wrap the string primitive and call the method or perform the property lookup. A String object can always be converted to its primitive counterpart with the <code>valueOf()</code> method.</p>
+<h3>String primitives and String objects</h3>
+<p>Note that JavaScript distinguishes between String objects and primitive string values (The same is true of Boolean and Numbers). String literals and strings returned from <code>String</code> calls in a non-constructor context (called without using the <code>new</code> keyword) are primitive strings. In contexts where a method is to be invoked on a primitive string or a property lookup occurs, JavaScript will automatically wrap the string primitive and call the method or perform the property lookup on the wrapper object instead.</p>
+<p>A String object can always be converted to its primitive counterpart with the <code>valueOf()</code> method.</p>
+<pre><code class="lang-js">const strPrim = "foo";
+const strPrim2 = String(1);
+const strObj = new String(strPrim);  // You should rarely use String as a constructor
+
+console.log(typeof strPrim);  // "string"
+console.log(typeof strPrim2); // "string"
+console.log(typeof strObj);   // "object"
+
+console.log(strObj.valueOf());
+</code></pre>
 <h3>Template literals (Template strings)</h3>
 <pre><code class="lang-js">`string text ${expression} string text`
 
@@ -102,7 +113,8 @@ function replacer(match, p1, p2, p3, offset, string) {
 <li>Object.prototype.toString.call(value) === '[object Array]'</li>
 <li>value instanceof Array</li>
 </ul>
-<p>Note that <code>value instanceof Array</code> evaluates to <code>false</code> when value is an array created in a different iframe than the Array constructor function (v is instance of thatFrame.contentWindow.Array)</p>
+<blockquote><p>Note that <code>value instanceof Array</code> evaluates to <code>false</code> when value is an array created in a different iframe than the Array constructor function (it is an instance of <code>thatFrame.contentWindow.Array</code>).</p>
+</blockquote>
 <pre><code class="lang-js">({}).toString.call([]);   // '[object Array]'
 ({}).toString.call({});   // '[object Object]'
 ({}).toString.call('');   // '[object String]'
@@ -138,8 +150,8 @@ function uniq(a) {
 <pre><code class="lang-js">JSON.stringify(function(){}) // undefined
 JSON.stringify([undefined, function(){}, () =&gt; {}])  // "[null, null, null]"
 </code></pre>
-<h3>Array-like object</h3>
-<p>An Object which has a length property of a non-negative integer, and usually some indexed properties. You can actually just use Array's <code>slice</code> function to convert it into a standard JavaScript array. <strong>The <code>slice</code> function is intentionally generic;</strong> it does not require that its <code>this</code> value be an Array object, so it works on anything that has a length property, which <code>arguments</code> conveniently does.</p>
+<h3>Array-like objects</h3>
+<p>In practice, such object is expected to actually have a <code>length</code> property and to have indexed elements in the range <code>0</code> to <code>length - 1</code>. You can actually just use Array's <code>slice</code> function to convert it into a standard JavaScript array. <strong>The <code>slice</code> function is intentionally generic;</strong> it does not require that its <code>this</code> value be an Array object, so it works on anything that has a length property. Many DOM objects are array-like — for example, <code>NodeList</code> and <code>HTMLCollection</code>. The <code>arguments</code> object is also array-like.</p>
 <pre><code class="lang-js">Array.prototype.slice.call(obj);  // same as [].slice.call(obj)
 </code></pre>
 <h3>Array.from()</h3>
@@ -153,7 +165,7 @@ Array.from([1, 2, 3], x =&gt; x + x);  // [2, 4, 6]
 
 // Since the array is initialized with `undefined` on each position,
 // the value of `v` below will be `undefined`
-Array.from({length: 5}, (v, i) =&gt; i);  // [0, 1, 2, 3, 4]
+Array.from({ length: 5 }, (v, i) =&gt; i);  // [0, 1, 2, 3, 4]
 </code></pre>
 <h3>Array.of()</h3>
 <p>It creates a new Array instance from a variable number of arguments. The difference between <code>Array.of()</code> and the <code>Array</code> constructor is in the handling of integer arguments: <code>Array.of(7)</code> creates an array with a single element, <code>7</code>, whereas <code>Array(7)</code> creates an empty array with a length of 7 (which implies an array of 7 empty slots, not slots with actual <code>undefined</code> values).</p>
@@ -163,6 +175,12 @@ Array.of(1, 2, 3); // [1, 2, 3]
 Array(7);          // array of 7 empty slots
 Array(1, 2, 3);    // [1, 2, 3]
 </code></pre>
+<blockquote><ol>
+<li><code>Array()</code> can be called with or without <code>new</code>. Both create a new Array instance.</li>
+<li>The <code>length</code> property of an array is a 32-bit unsigned integer, which limits the maximum number of entries an array can have, which is <code>Math.pow(2, 32) - 1</code>.</li>
+<li>Arrays can contain "empty slots" (not the same as slots filled with the value <code>undefined</code>), which are called sparse arrays.</li>
+</ol>
+</blockquote>
 <h3>Array.prototype.fill()</h3>
 <p>The fill method takes up to three arguments <code>value</code>, <code>start</code> and <code>end</code>. The start and end arguments are optional with default values of 0 and the length of the this object. <code>fill()</code> is intentionally generic, it does not require that its <code>this</code> value be an Array object.</p>
 <pre><code class="lang-js">Array(3).fill(4)  // [4, 4, 4]
@@ -175,6 +193,7 @@ arr[0].hi = "hi"; // [{ hi: "hi" }, { hi: "hi" }, { hi: "hi" }]
 </code></pre>
 <h3>Array.prototype.find()</h3>
 <pre><code class="lang-js">arr.find(callback(element[, index[, array]])[, thisArg])
+arr.findIndex(callback(element[, index[, array]])[, thisArg])
 
 const array1 = [5, 12, 8, 130, 44];
 const found = array1.find(element =&gt; element &gt; 10);  // 12
@@ -192,14 +211,7 @@ const result = inventory.find( ({ name }) =&gt; name === 'cherries' );
 <li>If <code>initialValue</code> is provided, then accumulator will be equal to <code>initialValue</code>, and <code>currentValue</code> will be equal to the first value in the array. If no <code>initialValue</code> is provided, then accumulator will be equal to the first value in the array, and <code>currentValue</code> will be equal to the second. </li>
 <li>If the array has only one element and no initialValue was provided, or if initialValue is provided but the array is empty, the solo value would be returned without calling callback.</li>
 </ul>
-<pre><code class="lang-js">arr.forEach(callback(currentValue [, index [, array]])[, thisArg]);
-
-// thisArg (Optional), value to use as `this` when executing callback
-[1,2,3].forEach(function(){console.log(this)})  // window
-[1,2,3].forEach(function(){console.log(this)}, {a: 1})  // {a: 1}
-[1,2,3].forEach(() =&gt; console.log(this), {a: 1})  // window
-
-arr.reduce(callback(accumulator, currentValue[, index[, array]])[, initialValue])
+<pre><code class="lang-js">arr.reduce(callback(accumulator, currentValue[, index[, array]])[, initialValue])
 
 // implement map using reduce
 function implementMapUsingReduce(list, func) {
@@ -233,7 +245,7 @@ const arr2 = [1, 2, [3, 4, [5, 6]]];
 arr2.flat();  // [1, 2, 3, 4, [5, 6]]
 
 const arr3 = [1, 2, [3, 4, [5, 6, [7, 8, [9, 10]]]]];
-arr4.flat(Infinity);  // [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+arr3.flat(Infinity);  // [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
 
 // deep level flatten use recursion
 // [].concat([1,[2,3]]) returns [1,[2,3]]  
@@ -257,41 +269,12 @@ arr1.flatMap(x =&gt; x.split(" "));
 <li>The time and space complexity of the sort cannot be guaranteed as it depends on the implementation.</li>
 <li>Since ECMAScript 2019, the specification dictates that <code>Array.prototype.sort</code> is stable. All major JavaScript engines now implement a stable Array sort.</li>
 </ul>
-<h3>New JS Array methods</h3>
-<pre><code class="lang-js">let wizards = ['Merlin', 'Ursula', 'Gandalf'];
-let reverseWizards = wizards.toReversed();
-
-// logs ["Gandalf", "Ursula", "Merlin"]
-console.log(reverseWizards);
-// logs ["Merlin", "Ursula", "Gandalf"]
-console.log(wizards);
-
-let wizards = ['Merlin', 'Ursula of the Sea', 'Gandalf the Gray'];
-let sortedWizards = wizards.toSorted();
-
-// logs ['Gandalf the Gray', 'Merlin', 'Ursula of the Sea']
-console.log(sortedWizards);
-// logs ['Merlin', 'Ursula of the Sea', 'Gandalf the Gray']
-console.log(wizards);
-
-let wizards = ['Merlin', 'Ursula', 'Gandalf', 'Radagast'];
-let lessWizards = wizards.toSpliced(2, 1);
-
-// logs ['Merlin', 'Ursula', 'Radagast']
-console.log(lessWizards);
-// logs ['Merlin', 'Ursula', 'Gandalf', 'Radagast']
-console.log(wizards);
-
-// Creates a copy of an array and updates a single value in the array.
-// e.g. You want to copy an array but use a different value for one index.
-let wizards = ['Merlin', 'Ursula', 'Gandalf'];
-let differentWizards = wizards.with(2, 'Radagast');
-
-// logs ['Merlin', 'Ursula', 'Radagast']
-console.log(differentWizards);
-// logs ['Merlin', 'Ursula', 'Gandalf']
-console.log(wizards);
-</code></pre>
+<h3>Newly available array methods</h3>
+<p><code>Array.prototype.at()</code> takes an integer value and returns the item at that index. Negative integers count back from the last item in the array.</p>
+<p><code>Array.prototype.with(index, value)</code> changes the value of a given index in the array, returning a new array with the element at the given index replaced with the given value. <em>The empty slots in the source array will be replaced with <code>undefined</code> in the new array.</em></p>
+<p><code>Array.prototype.toReversed()</code> returns a new array with the elements in reversed order.</p>
+<p><code>Array.prototype.toSorted()</code> returns a new array with the elements sorted in ascending order.</p>
+<p><code>Array.prototype.toSpliced(start, deleteCount, ...)</code> returns a new array with some elements removed or replaced at a given index, rather than modifying the original array.</p>
 <h2>Object</h2>
 <h3>Check if an object is empty</h3>
 <ul>
@@ -304,7 +287,6 @@ console.log(wizards);
 }
 badEmptyCheck(new Object());  // true
 badEmptyCheck(new String());  // true 
-badEmptyCheck(new Number());  // true
 badEmptyCheck(new Array());   // true
 
 function goodEmptyCheck(value) {
@@ -312,7 +294,6 @@ function goodEmptyCheck(value) {
 }
 badEmptyCheck(new Object());  // true
 badEmptyCheck(new String());  // false 
-badEmptyCheck(new Number());  // false
 badEmptyCheck(new Array());   // false
 </code></pre>
 <h3>Object.defineProperty()</h3>
@@ -505,7 +486,7 @@ theDog.toString(); // "Dog Gabby is a female chocolate Lab"
 +false // 0
 </code></pre>
 <h3>Object.assign()</h3>
-<p>Copy the values of all enumerable and own properties from one or more source objects to a target object and return the target object. If the source value is a reference to an object, it only copies that reference value (shallow copy). Properties in the target object will be overwritten by properties in the sources if they have the same key.</p>
+<p>Copy all enumerable own properties from one or more source objects to a target object and return the modified target object. If the source value is a reference to an object, it only copies that reference value (shallow copy). Properties in the target object will be overwritten by properties in the sources if they have the same key.</p>
 <pre><code class="lang-js">var obj = { a: 1 };
 var copy = Object.assign({}, obj);
 console.log(copy); // { a: 1 }
@@ -517,11 +498,15 @@ var o3 = { c: 3 };
 var obj = Object.assign(o1, o2, o3);
 console.log(obj); // { a: 1, b: 2, c: 3 }
 console.log(o1);  // { a: 1, b: 2, c: 3 }
+obj === o1; // true
 </code></pre>
 <h3>Object.create()</h3>
-<p>It creates a new object, using an existing object as the prototype of the newly created object. Be aware of that using <code>Object.keys()</code> on an object created via <code>Object.create()</code> will result in an empty array being returned.</p>
+<p>It creates a new object, using an existing object as the prototype of the newly created object.</p>
 <pre><code class="lang-js">const o1 = Object.create({});   // create a normal object
+
 const o2 = Object.create(null); // create a totally empty object (without prototype)
+// Is equivalent to:
+o2 = { __proto__: null };
 
 "first is: " + o1  // "first is: [object Object]"
 "second is: " + o2 // throws error: Cannot convert object to primitive value
@@ -549,6 +534,25 @@ Rectangle.prototype.constructor = Rectangle;
 var rect = new Rectangle();
 rect instanceof Rectangle  // true
 rect instanceof Shape      // true
+
+// ** In modern code, the class syntax should be preferred in any case.**
+</code></pre>
+<h3>Object.freeze()</h3>
+<p>Freezing an object prevents extensions <em>(An object is extensible if new properties can be added to it)</em> and makes existing properties non-writable and non-configurable. A frozen object can no longer be changed: new properties cannot be added, existing properties cannot be removed, their enumerability, configurability, writability, or value cannot be changed, and the object's prototype cannot be re-assigned. <code>freeze()</code> returns the same object that was passed into the function. It does not create a frozen copy.</p>
+<p>The result of calling <code>Object.freeze(obj)</code> only applies to the immediate properties of object itself (freeze is shallow).</p>
+<pre><code class="lang-js">const obj = {
+  prop() {},
+  foo: "bar",
+};
+
+const o = Object.freeze(obj);
+
+o === obj; // true
+obj.foo = "quux"; // silently does nothing
+obj.quaxxor = "the friendly duck";  // silently doesn't add the property
+
+// Attempted changes through Object.defineProperty, throw a TypeError in strict mode.
+Object.defineProperty(obj, "foo", { value: "eit" });
 </code></pre>
 <h3>Object.is()</h3>
 <p>It determines whether two values are the same value. The only difference between <code>Object.is()</code> and <code>===</code> is in their treatment of signed zeros and NaN values.</p>
@@ -566,7 +570,7 @@ Object.is(NaN, NaN);  // true
 Object.is(NaN, 0/0);  // true
 </code></pre>
 <h2>Map and Set</h2>
-<p>The Map object holds key-value pairs and <strong>remembers the original insertion order of the keys</strong>. Any value (both objects and primitive values) may be used as either a key or a value.</p>
+<p>The Map object holds key-value pairs and remembers the original insertion order of the keys. Any value (both objects and primitive values) may be used as either a key or a value.</p>
 <p>Object is similar to Map, and Objects have been used as Maps historically; however, there are important differences that make using a Map preferable in certain cases:</p>
 <ul>
 <li>The keys of an Object are String and Symbol, whereas they can be any value for a Map, including functions, objects, and any primitive.</li>
@@ -656,11 +660,17 @@ Array.from(mySet2)
 
 // intersection
 var intersection = new Set([...set1].filter(x =&gt; set2.has(x)));
+
+// Newly available 2024
+const odds = new Set([1, 3, 5, 7, 9]);
+const squares = new Set([1, 4, 9]);
+
+console.log(odds.intersection(squares)); // Set(2) { 1, 9 }
+console.log(odds.difference(squares)); // Set(3) { 3, 5, 7 }
+console.log(odds.union(squares)); // Set(6) { 1, 3, 5, 7, 9, 4 }
 </code></pre>
 <h3>WeakMap</h3>
-<blockquote><p>Normally, the garbage collector would collect this object and remove it from memory. However, because our Map is holding a reference, it'll never be garbage collected, causing a memory leak. Here’s where we can use the WeakMap type.</p>
-</blockquote>
-<p>Every key of a WeakMap is an object. Primitive data types as keys are not allowed. WeakMap allows garbage collector to do its task but not Map. There is no such thing as a list of WeakMap keys, they are just references to another objects. After removing the key from the memory we can still access it inside the map. At the same time removing the key of WeakMap removes it from weakmap as well by reference.</p>
+<p>An object's presence as a key in a WeakMap does not prevent the object from being garbage collected. Every key of a WeakMap is an object. Primitive data types as keys are not allowed. WeakMap allows garbage collector to do its task but not Map. There is no such thing as a list of WeakMap keys, they are just references to another objects.</p>
 <p>In WeakMaps, references to key objects are held "weakly", which means that they do not prevent garbage collection when there would be no other reference to the object. Because of references being weak, you cannot iterate over its keys or values, cannot clear all items (no clear method), cannot check its size (no size property).</p>
 <pre><code class="lang-js">// Map and Weakmap
 var k1 = {a: 1};
@@ -680,5 +690,3 @@ map.forEach(function (val, key) {
 k2 = null;
 wm.get(k2); // undefined
 </code></pre>
-<blockquote><p><code>WeakRef</code> is a similar built-in object, which holds a weak reference to another object, without preventing that object from getting garbage-collected. Correct use of <code>WeakRef</code> takes careful thought, and it's best avoided if possible.</p>
-</blockquote>
