--- a/kexizeroing.github.io/JavaScript prototype chain, Class and Proxy.html
+++ b/kexizeroing.github.io/JavaScript prototype chain, Class and Proxy.html
@@ -6,10 +6,10 @@ slug: js-prototype-class-proxy
 description: ""
 added: "Aug 4 2020"
 tags: [js]</p>
-<h2>updatedDate: "Apr 2 2024"</h2>
+<h2>updatedDate: "Aug 4 2024"</h2>
 <h2>The prototype chain</h2>
 <p>JavaScript is a bit confusing for developers experienced in class-based languages like Java or C++, as it is dynamic and does not provide a class implementation (the <code>class</code> keyword is introduced in ES2015, but is syntactical sugar, JavaScript remains prototype-based).</p>
-<p>When it comes to inheritance, JavaScript only has one construct: objects. Each object has a private property which holds a link to another object called its <strong>prototype</strong>. That prototype object has a prototype of its own, and so on until an object is reached with <code>null</code> as its prototype. By definition, <code>null</code> has no prototype, and acts as the final link in this prototype chain.</p>
+<p>Each JavaScript object has a private property which holds a link to another object called its <strong>prototype</strong>. That prototype object has a prototype of its own, and so on until an object is reached with <code>null</code> as its prototype. By definition, <code>null</code> has no prototype, and acts as the final link in this prototype chain.</p>
 <p>When trying to access a property of an object, the property will not only be sought on the object but on the prototype of the object, the prototype of the prototype, and so on until either a property with a matching name is found or the end of the prototype chain is reached.</p>
 <p>Following the ECMAScript standard, the notation <code>someObject.[[Prototype]]</code> is used to designate the prototype of <code>someObject</code>. <strong>Since ECMAScript 2015, the <code>[[Prototype]]</code> is accessed using the accessors <code>Object.getPrototypeOf()</code> and <code>Object.setPrototypeOf()</code>. This is equivalent to the JavaScript property <code>__proto__</code> which is non-standard but implemented by many browsers</strong>. It should not be confused with the <code>func.prototype</code> property of functions, which specifies the <code>[[Prototype]]</code> to be assigned to all instances of objects created by the given function when used as a constructor. The reference to the prototype object is copied to the internal <code>[[Prototype]]</code> property of the new instance.</p>
 <ul>
@@ -68,7 +68,7 @@ Object.setPrototypeOf(d, foo.prototype);
 <h2>Classes</h2>
 <p>JavaScript classes are primarily syntactical sugar over existing prototype-based inheritance. The class syntax does not introduce a new object-oriented model to JavaScript. <strong>The body of a class is executed in strict mode</strong>.</p>
 <p>Classes are in fact "special functions", and just as you can define function expressions and function declarations, the class syntax also includes class expressions and class declarations. An important difference between function declarations and class declarations is that function declarations are hoisted and class declarations are not.</p>
-<p>The constructor method is a special method for creating and initializing an object created with a class. There can only be one special method with the name "constructor" in a class. A constructor can use the <code>super</code> keyword to call the constructor of the parent class. If you do not specify a constructor method, a default constructor is used.</p>
+<p>The constructor method is a special method for creating and initializing an object created with a class. There can only be one special method with the name "constructor" in a class. If you do not specify a constructor method, a default constructor is used. JavaScript doesn’t allow class constructors to be <code>async</code>, so we have to do any async actions outside of a constructor.</p>
 <pre><code class="lang-js">// class declaration
 class Rectangle {
   constructor(height, width) {
@@ -161,8 +161,6 @@ tesla.#milesDriven     // Invalid
 console.log(ClassWithStaticField.staticField);
 ClassWithStaticField.staticMethod();
 </code></pre>
-<blockquote><p>JavaScript doesn’t allow class constructors to be <code>async</code>. We have to do any async actions outside of a constructor. Static class methods can help with this.</p>
-</blockquote>
 <h3>Class getter and setter</h3>
 <p>Add methods prefixed with <code>get</code> or <code>set</code> to create a getter and setter, which are executed based on what you are doing: accessing the variable, or modifying its value. If you only have a getter, the property cannot be set; If you only have a setter, you can change the value but not access it.</p>
 <pre><code class="lang-js">class Circle {
@@ -187,7 +185,7 @@ const circle = new Circle(10);
 console.log(circle.area);
 </code></pre>
 <h3>Class inheritance</h3>
-<p>A class can extend another class or extend traditional function-based "classes". The <code>super</code> keyword is used to reference the parent class. Private fields are not inherited by subclasses. To fix this, you can add a getter method to the Parent class that returns the value of the private field.</p>
+<p>A class can extend another class or extend traditional function-based "classes". The <code>super</code> keyword is used to reference the parent class. Private fields are not inherited by subclasses. To fix this, you can add a getter method to the parent class that returns the value of the private field.</p>
 <pre><code class="lang-js">class Square extends Polygon {
   constructor(length) {
     // calls parent class constructor
@@ -239,22 +237,92 @@ const b = new B();  // logs "B"
 </code></pre>
 <h2>Proxy and Reflect</h2>
 <p>The <strong>Proxy</strong> object enables you to create a proxy for another object, which can intercept and redefine fundamental operations for that object. Proxy objects are commonly used to log property accesses, validate, format, or sanitize inputs, and so on.</p>
-<p>Handler functions are sometimes called traps, because they trap calls to the underlying target object. It's important to realize that all interactions with an object eventually boils down to the invocation of one of these internal methods, and that they are all customizable through proxies.</p>
-<pre><code>[[GetPrototypeOf]]    -&gt;    getPrototypeOf()
-[[SetPrototypeOf]]    -&gt;    setPrototypeOf()
-[[IsExtensible]]        -&gt;  isExtensible()
-[[PreventExtensions]]   -&gt;  preventExtensions()
-[[GetOwnProperty]]      -&gt;  getOwnPropertyDescriptor()
-[[DefineOwnProperty]]   -&gt;  defineProperty()
-[[HasProperty]]       -&gt;    has()
-[[Get]]               -&gt;  get()
-[[Set]]                 -&gt;  set()
-[[Delete]]              -&gt;  deleteProperty()
-[[OwnPropertyKeys]]     -&gt;  ownKeys()
-[[Call]]                  -&gt;  apply()
-[[Construct]]           -&gt;  construct()
+<p>Handler functions are sometimes called traps, because they trap calls to the underlying target object. <em>A trap is used to intercept an operation on an object — it provides a custom implementation for an object internal method.</em> It's important to realize that all interactions with an object eventually boils down to the invocation of one of these internal methods, and that they are all customizable through proxies.</p>
+<table>
+<thead><tr>
+<th>Internal Method</th>
+<th>Corresponding Trap</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>[[GetPrototypeOf]]</td>
+<td>getPrototypeOf()</td>
+</tr>
+<tr>
+<td>[[SetPrototypeOf]]</td>
+<td>setPrototypeOf()</td>
+</tr>
+<tr>
+<td>[[IsExtensible]]</td>
+<td>isExtensible()</td>
+</tr>
+<tr>
+<td>[[PreventExtensions]]</td>
+<td>preventExtensions()</td>
+</tr>
+<tr>
+<td>[[GetOwnProperty]]</td>
+<td>getOwnPropertyDescriptor()</td>
+</tr>
+<tr>
+<td>[[DefineOwnProperty]]</td>
+<td>defineProperty()</td>
+</tr>
+<tr>
+<td>[[HasProperty]]</td>
+<td>has()</td>
+</tr>
+<tr>
+<td>[[Get]]</td>
+<td>get()</td>
+</tr>
+<tr>
+<td>[[Set]]</td>
+<td>set()</td>
+</tr>
+<tr>
+<td>[[Delete]]</td>
+<td>deleteProperty()</td>
+</tr>
+<tr>
+<td>[[OwnPropertyKeys]]</td>
+<td>ownKeys()</td>
+</tr>
+<tr>
+<td>[[Call]]</td>
+<td>apply()</td>
+</tr>
+<tr>
+<td>[[Construct]]</td>
+<td>construct()</td>
+</tr>
+</tbody>
+</table>
+<pre><code class="lang-js">// The target object can be any sort of object,
+// including a native array, a function, or even another proxy.
+const p = new Proxy(
+  {},
+  {
+    ownKeys(target) {
+      console.log("called");
+      return ["a", "b", "c"];
+    },
+    has(target, prop) {
+      console.log(`called: ${prop}`);
+      return true;
+    },
+  },
+);
+
+console.log(Object.getOwnPropertyNames(p));
+// "called"
+// [ 'a', 'b', 'c' ]
+console.log("a" in p);
+// "called: a"
+// true
 </code></pre>
-<p>The <strong>Reflect</strong> namespace object contains static methods for invoking interceptable JavaScript object internal methods. The methods are the same as those of proxy handlers. All properties and methods of Reflect are static <em>(just like the Math object)</em>.</p>
+<p>The <strong>Reflect</strong> namespace object contains static methods for invoking interceptable JavaScript object internal methods. The methods are the same as those of proxy handlers. Unlike most global objects, Reflect is not a constructor. You cannot use it with the <code>new</code> operator or invoke the Reflect object as a function. All properties and methods of Reflect are static.</p>
 <p>The major use case of Reflect is to provide default forwarding behavior in Proxy handler traps. The Reflect API is used to invoke the corresponding internal method. For example, you create a proxy with a <code>deleteProperty</code> trap that intercepts the <code>[[Delete]]</code> internal method. <code>Reflect.deleteProperty()</code> is used to invoke the default <code>[[Delete]]</code> behavior on targetObject directly. You can replace it with <code>delete</code>, but using Reflect saves you from having to remember the syntax that each internal method corresponds to.</p>
 <pre><code class="lang-js">const person = {
   name: "John Doe",
@@ -268,6 +336,10 @@ const personProxy = new Proxy(person, {
   set: (obj, prop, value) =&gt; {
     console.log(`Changed ${prop} from ${obj[prop]} to ${value}`);
     Reflect.set(obj, prop, value);
+  },
+  deleteProperty(obj, prop) {
+    console.log("Deleting property:", prop);
+    return Reflect.deleteProperty(obj, prop);
   },
 });
 </code></pre>
