--- a/kexizeroing.github.io/Notes on work projects (in Chinese).html
+++ b/kexizeroing.github.io/Notes on work projects (in Chinese).html
@@ -53,7 +53,7 @@ new Vue({
   render: h =&gt; h(App)
 })
 </code></pre>
-<blockquote><p>Vue 是如何被编译的中文博客系列：<a href="https://juejin.cn/column/7340830470463242278">https://juejin.cn/column/7340830470463242278</a></p>
+<blockquote><p>Vue 是如何被编译的详细介绍：<a href="https://vue-compiler.iamouyang.cn/template/baseCompile.html">https://vue-compiler.iamouyang.cn/template/baseCompile.html</a></p>
 </blockquote>
 <p>Vue 3 在 2022 年 2 月代替 Vue 2 成为 Vue 的默认版本。</p>
 <ul>
@@ -519,15 +519,20 @@ if (!isInIframe &amp;&amp; !ua.toLowerCase().match(/micromessenger|android|iphon
 </ol>
 </blockquote>
 <h3>开发自己的调试工具</h3>
-<p><a href="https://kentcdodds.com/blog/make-your-own-dev-tools">https://kentcdodds.com/blog/make-your-own-dev-tools</a><br/>
-<a href="https://app-dev-tools.netlify.app">https://app-dev-tools.netlify.app</a></p>
+<ul>
+<li><a href="https://kentcdodds.com/blog/make-your-own-dev-tools">https://kentcdodds.com/blog/make-your-own-dev-tools</a></li>
+<li><a href="https://app-dev-tools.netlify.app">https://app-dev-tools.netlify.app</a></li>
+<li><a href="https://github.com/coryhouse/switchboard">https://github.com/coryhouse/switchboard</a></li>
+</ul>
 <h3>日常开发 Tips and Tricks</h3>
 <ul>
 <li><p>The <code>input</code> event is fired every time the value of the element changes. This is unlike the <code>change</code> event, which only fires when the value is committed, such as by pressing the enter key or selecting a value from a list of options. Note that <code>onChange</code> in React behaves like the browser <code>input</code> event. <em>(in React it is idiomatic to use <code>onChange</code> instead of <code>onInput</code>)</em></p>
 </li>
 <li><p>The order in which the events are fired: <code>mousedown</code> --&gt; <code>mouseup</code> --&gt; <code>click</code>. When you add a <code>blur</code> event, it is actually fired before the <code>mouseup</code> event and after the <code>mousedown</code> event of the button. Refer to <a href="https://codepen.io/mudassir0909/full/qBjvzL">https://codepen.io/mudassir0909/full/qBjvzL</a></p>
 </li>
-<li><p>Reading content with <code>textContent</code> is much faster than <code>innerText</code>. The <code>insertAdjacentHTML</code> method is much faster than <code>innerHTML</code> because it doesn’t have to destroy the DOM first before inserting.</p>
+<li><p>Reading content with <code>textContent</code> is much faster than <code>innerText</code> <em>(<code>innerText</code> had the overhead of checking to see if the element was visible or not yet)</em>. The <code>insertAdjacentHTML</code> method is much faster than <code>innerHTML</code> because it doesn’t have to destroy the DOM first before inserting.</p>
+</li>
+<li><p>HTML files input change event doesn't fire upon selecting the same file. You can put <code>this.value = null</code> at the end of the <code>onchange</code> event, which will reset the input's value and trigger the <code>onchange</code> event again.</p>
 </li>
 <li><p>If we are appending each list item to the DOM as we create it, this is inefficient because the DOM is updated each time we append a new list item. Instead, we can create a document fragment using <code>document.createDocumentFragment()</code> and append all of the list items to the fragment. Then, we can append the fragment to the DOM. This way, the DOM is only updated once.</p>
 </li>
