--- a/kexizeroing.github.io/Practical considerations for Input fields.html
+++ b/kexizeroing.github.io/Practical considerations for Input fields.html
@@ -4,7 +4,8 @@
 title: "Practical considerations for Input fields"
 slug: practical-considerations-for-input-fields
 description: ""
-added: "Jun 5 2024"</p>
+added: "Jun 5 2024"
+updatedDate: "July 30 2024"</p>
 <h2>tags: [web]</h2>
 <h2>Dealing with contenteditable elements in Vue</h2>
 <pre><code class="lang-vue">&lt;template&gt;
@@ -82,6 +83,7 @@ const List = memo(({ filter }) =&gt; (
 <p>What's the issue here? When you type in the filter, it takes a long time to update. This is the problem with synchronous rendering. Let's opt into concurrent rendering. <code>useDeferredValue</code> is a React Hook that lets you defer updating a part of the UI, and the timeout is determined by the React scheduler, not the developer. Which means, if the React has some free cycles, it will update the deferred value, if React is too busy rendering other stuff, it not going to update the deferred value.</p>
 <pre><code class="lang-jsx">export default function App() {
   const [filter, setFilter] = useState('')
+  // Used to defer updating a part of the UI.
   const deferredFilter = useDeferredValue(filter)
 
   return (
@@ -102,12 +104,65 @@ const List = memo(({ filter }) =&gt; (
 }
 </code></pre>
 <p>Now we're recomputing the list only when the deferred value changes, so we do it at a more opportune time for performance. To be more specific, during updates, the deferred value will “lag behind” the latest value. In particular, React will first re-render without updating the deferred value, and then try to re-render with the newly received value in the background.</p>
-&lt;figure&gt;
-  &lt;video width="650" controls muted&gt;
-    &lt;source src="https://github.com/kexiZeroing/blog-images/raw/main/xmsi0wSKa3DHqz9i.mp4"&gt;
-  &lt;/video&gt;
-  &lt;figcaption&gt;useTransition in React made by @asidorenko_&lt;/figcaption&gt;
-&lt;/figure&gt;<h2>Styling validation status</h2>
+<p>A similar scenario uses <code>useTransition</code> hook. Both <code>useDeferredValue</code> and <code>useTransition</code> hooks are part of React's Concurrent Features and are designed to help manage expensive updates.</p>
+<ul>
+<li><code>useTransition</code>: Primarily for handling state updates that cause expensive re-renders.</li>
+<li><code>useDeferredValue</code>: For deferring the render of less important parts of the UI.</li>
+</ul>
+<pre><code class="lang-jsx">// An example written by @asidorenko_
+export default function Page() {
+  const [tab, setTab] = useState(1)
+
+  return (
+    &lt;&gt;
+      &lt;div&gt;
+        &lt;TabButton onClick={() =&gt; setTab(1)}&gt;Tab 1&lt;/TabButton&gt;
+        &lt;TabButton onClick={() =&gt; setTab(2)}&gt;Tab 2&lt;/TabButton&gt;
+        &lt;TabButton onClick={() =&gt; setTab(3)}&gt;Tab 3&lt;/TabButton&gt;
+      &lt;/div&gt;
+      { tab === 1 &amp;&amp; &lt;Tab1 /&gt; }
+      { tab === 2 &amp;&amp; &lt;Tab2 /&gt; }
+      { tab === 3 &amp;&amp; &lt;Tab3 /&gt; }
+    &lt;/&gt;
+  )
+}
+
+function SlowComponent() {
+  let startTime = performance.now()
+  while (performance.now() - startTime &lt; 10)
+  return &lt;li&gt;Slow component&lt;/li&gt;
+}
+
+function Tab2() {
+  const items = []
+  for (let i = 0; i &lt; 100; i++) {
+    items.push(&lt;SlowComponent key={i} /&gt;)
+  }
+  return &lt;ul&gt;{items}&lt;/ul&gt;
+}
+
+function TabButton({ children, isActive, onClick }) {
+  // Used to mark updates as non-urgent.
+  const [isPending, startTransition] = useTransition()
+
+  return (
+    &lt;button
+      className={cn(
+        isActive &amp;&amp; "text-pink-500",
+        isPending &amp;&amp; "opacity-50"
+      )}
+      onClick={() =&gt; {
+        startTransition(() =&gt; {
+          onClick()
+        })
+      }}
+    &gt;
+      {children}
+    &lt;/button&gt;
+  )
+}
+</code></pre>
+<h2>Styling validation status</h2>
 <p>The <code>:user-valid</code> and <code>:user-invalid</code> pseudo-class selectors are similar to the existing <code>:valid</code> and <code>:invalid</code> pseudo-classes. Both match a form control based on whether its current value satisfies its validation constraints. However, the advantage of the new <code>:user-valid</code> and <code>:user-invalid</code> pseudo-classes is that they match a form control only after a user has significantly interacted with the input.</p>
 <p>A form control that is required and empty will match <code>:invalid</code> even if a user has not started interacting with the page. However, that same form control won't match <code>:user-invalid</code> until the user has changed the input and left it in an invalid state.</p>
 <blockquote><p><code>:user-valid</code> and <code>:user-invalid</code> are available in all three browser engines (Chrome 119+)</p>
