--- a/kexizeroing.github.io/Using ES modules.html
+++ b/kexizeroing.github.io/Using ES modules.html
@@ -6,7 +6,7 @@ slug: using-es-modules
 description: ""
 added: "Aug 12 2020"
 tags: [js]</p>
-<h2>updatedDate: "May 5 2024"</h2>
+<h2>updatedDate: "Aug 4 2024"</h2>
 <h2>ES Modules</h2>
 <p>While Node.js has been using the CommonJS standard for years and there are a number of JavaScript libraries and frameworks that enable module usage, the browser never had a module system. A module system must be first standardized by ECMAScript and then implemented by the browser. The good news is that modern browsers have started to support module functionality natively, and the use of native JavaScript modules is dependent on the <em>import</em> and <em>export</em> statements. <strong>The import and export statements cannot be used in embedded scripts unless such script has a <code>type="module"</code></strong>.</p>
 <h3>Exporting module features</h3>
@@ -101,6 +101,20 @@ Square.reportArea();
   square1.draw();
   square1.reportArea();
 })
+</code></pre>
+<h3>Import Attributes</h3>
+<p>The Import Attributes proposal, formerly known as Import Assertions, adds an inline syntax for module import statements to pass on more information alongside the module specifier. The initial application for such attributes will be to support additional types of modules in a common way across JavaScript environments, starting with JSON modules.</p>
+<pre><code class="lang-js">// Executes JS if it responds with a JavaScript MIME type (e.g. `text/javascript`)
+import data from 'https://evil.com/data.json';
+</code></pre>
+<p>File extensions can’t be used to make a module type determination because they aren’t a reliable indicator of content type on the web. On the web, there is a widespread <a href="https://github.com/tc39/proposal-import-attributes/blob/master/content-type-vs-file-extension.md">mismatch between file extension and the HTTP Content Type header</a>.</p>
+<p>When a developer wants to import a JSON module, they must use an import assertion to specify that it’s supposed to be JSON. The import will fail if the MIME type received from the network doesn’t match the expected type.</p>
+<pre><code class="lang-js">// https://github.com/tc39/proposal-import-attributes
+// Status: Stage 3
+import json from "./foo.json" with { type: "json" };
+
+// dynamic import
+import("foo.json", { with: { type: "json" } })
 </code></pre>
 <h3>Import maps</h3>
 <p>In common module systems, such as CommonJS, or a module bundler like webpack, the import specifier was mapped to a specific file, and users only needed to apply the bare module specifier (usually the package name) in the import statement, and concerns around module resolution were taken care of automatically.</p>
